--- a/ODD/src/View/IFRMLogin.form
+++ b/ODD/src/View/IFRMLogin.form
@@ -70,7 +70,7 @@
                           <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
                           <Component id="TFPassword" alignment="0" max="32767" attributes="0"/>
                           <Component id="BTNEnter" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jButton2" alignment="0" pref="260" max="32767" attributes="0"/>
+                          <Component id="BTNSignin" alignment="0" pref="260" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -90,7 +90,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="BTNEnter" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="256" max="32767" attributes="0"/>
-                      <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                      <Component id="BTNSignin" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -142,13 +142,16 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BTNEnterActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton2">
+            <Component class="javax.swing.JButton" name="BTNSignin">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Arial" size="12" style="1"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Sign In"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BTNSigninActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
