--- a/ODD/src/View/FRMMain.form
+++ b/ODD/src/View/FRMMain.form
@@ -113,6 +113,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="ODDSystem"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel1MouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="BTNLogin">
               <Properties>
