List and delete box

--- a/ODD/src/View/FRMMain.form
+++ b/ODD/src/View/FRMMain.form
@@ -68,6 +68,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Add Document"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MIAddDocActionPerformed"/>
+          </Events>
         </MenuItem>
         <MenuItem class="javax.swing.JMenuItem" name="MIListDocs">
           <Properties>
